--- a/digital-literacy-survey.html
+++ b/digital-literacy-survey.html
@@ -10,6 +10,7 @@
     <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
     <link rel="stylesheet" href="survey-assets.css">
+    <link rel="icon" type="image/png" href="assets/images/favicon.png">
     </head>
 <body>
     <header>
