--- a/digital-literacy-survey.html
+++ b/digital-literacy-survey.html
@@ -95,7 +95,7 @@
             
             <div class="success-message">
                 <i class="fas fa-check-circle"></i>
-                <h3>Thank You for Your Participation!</h3>
+                <h3><a href="survey-statistic.html">Thank You for Your Participation! Click to View Statistic.</a></h3>
                 <p>Your responses have been recorded. Redirecting you to our resources page...</p>
             </div>
             
