--- a/survey-statistic.html
+++ b/survey-statistic.html
@@ -496,9 +496,9 @@
             <i class="fas fa-times"></i>
         </button>
         <a href="index.html">Home</a>
-        <a href="survey.html">Survey</a>
-        <a href="analytics.html">Analytics</a>
-        <a href="resources.html">Resources</a>
+        <a href="digital-literacy-survey.html">Survey</a>
+        <a href="index.html">Analytics</a>
+        <a href="index.html">Resources</a>
     </div>
 
     <section class="analytics-hero">
@@ -530,13 +530,9 @@
 
     <footer>
         <div class="container">
-            <div class="footer-links">
-                <a href="#">Privacy Policy</a>
-                <a href="#">Terms of Use</a>
-                <a href="#">Contact Us</a>
-                <a href="#">About This Project</a>
-            </div>
-            <p class="copyright">© 2025 Digital Ethics & Inclusivity Hub. All rights reserved.</p>
+           
+            
+            <p class="copyright">© 2023 Digital Ethics & Inclusivity Hub. All rights reserved.</p>
         </div>
     </footer>
 
