--- a/survey-statistic.html
+++ b/survey-statistic.html
@@ -480,9 +480,9 @@
                 </div>
                 <div class="nav-links">
                     <a href="index.html">Home</a>
-                    <a href="survey.html">Survey</a>
-                    <a href="analytics.html" class="active">Analytics</a>
-                    <a href="resources.html">Resources</a>
+                    <a href="digital-literacy-survey.html">Survey</a>
+                    <a href="survey-statistic.html" class="active">Analytics</a>
+                    <a href="index.html">Resources</a>
                 </div>
                 <button class="mobile-menu-btn">
                     <i class="fas fa-bars"></i>
@@ -532,7 +532,7 @@
         <div class="container">
            
             
-            <p class="copyright">© 2023 Digital Ethics & Inclusivity Hub. All rights reserved.</p>
+            <p class="copyright">© 2025 Digital Ethics & Inclusivity Hub. All rights reserved.</p>
         </div>
     </footer>
 
