--- a/survey-statistic.html
+++ b/survey-statistic.html
@@ -9,6 +9,7 @@
     <!-- Firebase SDK -->
     <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
+      <link rel="icon" type="png" href="assets/images/lgog.png">
     <style>
         :root {
             --primary: #00f7ff;
