--- a/digital-literacy-survey.html
+++ b/digital-literacy-survey.html
@@ -10,7 +10,7 @@
     <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
     <link rel="stylesheet" href="survey-assets.css">
-    <link rel="icon" type="png" href="assets/images/lgog.png">
+    <link rel="icon" size="512x512" type="png" href="assets/images/lgog.png">
     </head>
 <body>
     <header>
